syntax = "proto3";
package io.harness.eventsframework.schemas.entity;
option java_multiple_files = true;
option go_package = "970_ng_commons";

enum ScopeProtoEnum {
  ACCOUNT = 0;
  ORG = 1;
  PROJECT = 2;
  UNKNOWN = 3;
}